--- a/price_alert_app/pyproject.toml
+++ b/price_alert_app/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "scraper"
+name = "price_alert"
 version = "0.1.0"
 description = ""
 authors = ["Lee Sutcliffe <lee.sutcliffe@armakuni.com>"]
