--- a/price_alert_app/pyproject.toml
+++ b/price_alert_app/pyproject.toml
@@ -12,6 +12,7 @@ pandas = "^1.4.0"
 azure-storage-blob = "^12.9.0"
 types-requests = "^2.27.7"
 azure-identity = "^1.7.1"
+azure-functions = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
