--- a/price_alert_app/pyproject.toml
+++ b/price_alert_app/pyproject.toml
@@ -13,6 +13,8 @@ azure-storage-blob = "^12.9.0"
 types-requests = "^2.27.7"
 azure-identity = "^1.7.1"
 azure-functions = "^1.8.0"
+toml = "^0.10.2"
+types-toml = "^0.10.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.2.5"
