--- a/price_alert_app/pyproject.toml
+++ b/price_alert_app/pyproject.toml
@@ -26,13 +26,14 @@ mypy = "^0.931"
 isort = "^5.10.1"
 vulture = "^2.3"
 types-freezegun = "^1.1.6"
+requests-mock = "^1.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.vulture]
-exclude = ["tests",".venv"]
+exclude = ["tests",".venv", "__init__.py"]
 
 [tool.mypy]
 python_version = 3.9
